--- a/project/engine.cfg
+++ b/project/engine.cfg
@@ -9,6 +9,8 @@ boot_splash_fullsize=true
 [autoload]
 
 Transition="res://globals/Transition.scn"
+Music="res://globals/Music.scn"
+Sounds="res://globals/Sounds.scn"
 
 [display]
 
