--- a/project/export.cfg
+++ b/project/export.cfg
@@ -30,14 +30,14 @@ architecture/x86=false
 command_line/extra_args=""
 custom_package/debug="/home/pgears/Documentos/godot/bin/godot.android.debug.apk"
 custom_package/release="/home/pgears/Documentos/godot/bin/godot.android.release.apk"
-keystore/release=""
-keystore/release_password=""
-keystore/release_user=""
+keystore/release="/home/pgears/Dropbox/Desarrollo/PIXELATEDGEARS/keys/release.keystore"
+keystore/release_password="@F3Dericcio"
+keystore/release_user="pixelatedgearsrelease"
 one_click_deploy/clear_previous_install=true
 package/icon=""
 package/name=""
 package/signed=true
-package/unique_name="org.godotengine.$genname"
+package/unique_name="io.github.fede0d.$genname"
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
@@ -268,7 +268,7 @@ icon/icon_png256x256=true
 icon/icon_png32x32=true
 icon/icon_png48x48=true
 icon/icon_png64x64=true
-resources/pack_mode=1
+resources/pack_mode=0
 version_info/add_godot_version=true
 version_info/company_name="Godot Engine"
 version_info/file_description="Created With Godot Engine"
