--- a/project/export.cfg
+++ b/project/export.cfg
@@ -210,8 +210,8 @@ user_permissions/6=""
 user_permissions/7=""
 user_permissions/8=""
 user_permissions/9=""
-version/code=1
-version/name="1.0"
+version/code=2
+version/name="1.1"
 
 [platform:BlackBerry 10]
 
@@ -235,10 +235,10 @@ options/memory_size=3
 
 [platform:Linux X11]
 
-binary/64_bits=true
+binary/64_bits=false
 custom_binary/debug=""
 custom_binary/release=""
-resources/pack_mode=1
+resources/pack_mode=0
 
 [platform:Mac OSX]
 
